added styling to arrange diff components of the id card

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "jsx": "react",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/pages/id_card": ["./src/pages/id_card.jsx"]
     }
   }
 }
