--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.18",
+    "axios": "^1.7.2",
+    "next": "^13.5.6",
     "react": "^18",
     "react-dom": "^18"
   },
