--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -29,6 +29,9 @@ steps:
         "--image", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}"
       ]
 
+options:
+  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
+
 substitutions:
   _REGION: asia-southeast1
   _SERVICE_NAME: gebirah-backend
