--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -30,7 +30,8 @@ steps:
       ]
 
 options:
-  logging: CLOUD_LOGGING_ONLY
+  logging: GCS_ONLY
+  logsBucket: gs://gebirah-logs/
 
 substitutions:
   _REGION: asia-southeast1
