--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -29,6 +29,8 @@ steps:
         "--image", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}"
       ]
 
+options:
+  logging: CLOUD_LOGGING_ONLY
 
 substitutions:
   _REGION: asia-southeast1
