--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@badeball/cypress-cucumber-preprocessor": "^20.0.7",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.1",
+    "@cypress/webpack-preprocessor": "^6.0.2",
     "@types/node": "20.14.5",
     "@types/react": "18.3.3",
     "autoprefixer": "^10.4.19",
+    "cypress": "^13.12.0",
+    "esbuild": "^0.21.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8.4.38",
