--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "next": "^13.5.6",
+    "next-qrcode": "^2.5.1",
     "react": "^18",
     "react-dom": "^18"
   },
