--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,11 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: gebirah-postgres
-  username: dbadmin
-  password: REDACTED
-  host: /cloudsql/gebirah-14:asia-southeast1:gebirah-postgres
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  timeout: 5000
+  database: "gebirah-postgres"
+  username: "dbadmin"
+  password: "REDACTED"
+  host: "/cloudsql/gebirah-14:asia-southeast1:gebirah-postgres"
