--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.1",
     "axios": "^1.7.2",
     "next": "^13.5.6",
     "next-qrcode": "^2.5.1",
