--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
-    "next": "13.4.18",
+    "next": "^13.5.6",
     "react": "^18",
     "react-dom": "^18"
   },
