reorganised components directory, import css to other pages

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
     "jsx": "react",
     "paths": {
       "@/*": ["./src/*"],
-      "@/pages/id_card": ["./src/pages/id_card.jsx"]
+      "@/pages/info/*": ["./src/pages/info/*"],
+      "@/pages/id_card": ["./src/pages/id_card.jsx"],
     }
   }
 }
