--- a/config/database.yml
+++ b/config/database.yml
@@ -4,14 +4,8 @@ default: &default
   timeout: 5000
 
 development:
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
-  timeout: 5000
-  username: "postgres.pucohrmkpcwjcjrmnogy"
-  password: "gebirah_tonytan"
-  database: "postgres"
-  host:   "aws-0-ap-southeast-1.pooler.supabase.com"
+  <<: *default
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
