--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@material/textfield": "^14.0.0",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@types/next-auth": "^3.15.0",
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.1",
     "axios": "^1.7.2",
     "next": "^13.5.6",
+    "next-auth": "^4.24.7",
+    "next-auth-axios-adapter": "^1.0.4",
     "next-qrcode": "^2.5.1",
     "react": "^18",
     "react-dom": "^18"
