--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next-auth-axios-adapter": "^1.0.4",
     "next-qrcode": "^2.5.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-notifications-component": "^4.0.1"
   },
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^20.0.7",
