--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.1",
     "axios": "^1.7.2",
+    "embla-carousel-react": "^8.1.5",
     "next": "^13.5.6",
     "next-auth": "^4.24.7",
     "next-auth-axios-adapter": "^1.0.4",
