--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@badeball/cypress-cucumber-preprocessor": "^20.0.7",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.1",
     "@cypress/webpack-preprocessor": "^6.0.2",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "20.14.5",
     "@types/react": "18.3.3",
     "autoprefixer": "^10.4.19",
