--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "next-auth": "^4.24.7",
     "next-auth-axios-adapter": "^1.0.4",
     "next-qrcode": "^2.5.1",
+    "opencv-document-scanner": "^1.1.1",
     "react": "^18",
+    "react-camera-pro": "^1.4.0",
     "react-dom": "^18",
     "react-notifications-component": "^4.0.1"
   },
