--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/x-date-pickers": "^7.7.1",
+    "@techstark/opencv-js": "^4.9.0-release.3",
     "@types/next-auth": "^3.15.0",
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.1",
     "axios": "^1.7.2",
+    "canvas": "^2.11.2",
     "dayjs": "^1.11.11",
     "embla-carousel-react": "^8.1.5",
+    "http-proxy-agent": "^7.0.2",
+    "jscanify": "^1.2.0",
+    "net": "^1.0.2",
     "next": "^13.5.6",
     "next-auth": "^4.24.7",
     "next-auth-axios-adapter": "^1.0.4",
@@ -30,7 +35,8 @@
     "react": "^18",
     "react-camera-pro": "^1.4.0",
     "react-dom": "^18",
-    "react-notifications-component": "^4.0.1"
+    "react-notifications-component": "^4.0.1",
+    "tls": "^0.0.1"
   },
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^20.0.7",
@@ -46,5 +52,11 @@
     "eslint-config-next": "14.2.4",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false,
+    "child_process": false
   }
 }
