--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:test": "NODE_ENV=test npm run dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@heroicons/react": "^2.1.4",
     "@material/textfield": "^14.0.0",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
@@ -26,6 +28,7 @@
     "next-auth": "^4.24.7",
     "next-auth-axios-adapter": "^1.0.4",
     "next-qrcode": "^2.5.1",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-notifications-component": "^4.0.1"
