--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@types/next-auth": "^3.15.0",
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.1",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "embla-carousel-react": "^8.1.5",
@@ -44,7 +48,7 @@
     "esbuild": "^0.21.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4"
   }
 }
