--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.4",
     "@material/textfield": "^14.0.0",
     "@mui/icons-material": "^5.15.20",
@@ -21,21 +25,18 @@
     "@types/next-auth": "^3.15.0",
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.1",
-    "@fortawesome/fontawesome-free": "^6.5.2",
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "embla-carousel-react": "^8.1.5",
-    "next": "^13.5.6",
+    "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "next-auth-axios-adapter": "^1.0.4",
     "next-qrcode": "^2.5.1",
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-notifications-component": "^4.0.1"
+    "react-notifications-component": "^4.0.1",
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^20.0.7",
