--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react": "18.3.3",
     "autoprefixer": "^10.4.19",
     "cypress": "^13.12.0",
+    "cypress-cucumber-preprocessor": "^4.3.1",
     "esbuild": "^0.21.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
