--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-auth-axios-adapter": "^1.0.4",
     "next-qrcode": "^2.5.1",
     "opencv-document-scanner": "^1.1.1",
+    "pdfkit": "^0.15.0",
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-camera-pro": "^1.4.0",
