--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "autoprefixer": "^10.4.19",
     "cypress": "^13.13.0",
     "cypress-cucumber-preprocessor": "^4.3.1",
+    "cypress-file-upload": "^5.0.8",
     "esbuild": "^0.21.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
