--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/next-auth": "^3.15.0",
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.1",
+    "aos": "^2.3.4",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "embla-carousel-react": "^8.1.5",
