--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,13 @@
 # [START cloudrun_rails_cloudbuild]
 steps:
+  - id: "fetch secrets"
+    name: "gcr.io/cloud-builders/gcloud"
+    entrypoint: "bash"
+    args:
+      [
+        "-c",
+        "gcloud secrets versions access latest --secret=rails-master-key > config/master.key"
+      ]
   - id: "build image"
     name: "gcr.io/cloud-builders/docker"
     entrypoint: 'bash'
