--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ production:
   encoding: unicode
   pool: 5
   timeout: 5000
-  username: <%= Rails.application.credentials.db_username %>
-  password: <%= Rails.application.credentials.db_password %>
+  username: "postgres.pucohrmkpcwjcjrmnogy"
+  password: "gebirah_tonytan"
   database: "postgres"
-  host:   <%= Rails.application.credentials.db_host %>
+  host:   "aws-0-ap-southeast-1.pooler.supabase.com"
