--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,12 +6,15 @@ steps:
     args:
       [
         "-c",
-        "gcloud secrets versions access latest --secret=RAILS_MASTER_KEY > config/master.key"
+        "gcloud secrets versions access latest --secret=RAILS_MASTER_KEY > config/master.key && \
+         if [ -s config/master.key ]; then echo 'Secret fetched successfully'; else echo 'Failed to fetch secret'; fi"
       ]
+
   - id: "build image"
     name: "gcr.io/cloud-builders/docker"
     entrypoint: 'bash'
-    args: ["-c", "docker build -t gcr.io/${PROJECT_ID}/${_SERVICE_NAME} . "]
+    args: ["build", "--build-arg", "MASTER_KEY=$(cat config/master.key)", "-t", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}", "."]
+    secretEnv: ["RAILS_MASTER_KEY"]
 
   - id: "push image"
     name: "gcr.io/cloud-builders/docker"
@@ -36,6 +39,11 @@ steps:
         "--region", "${_REGION}",
         "--image", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}"
       ]
+
+availableSecrets:
+  secretManager:
+    - versionName: "projects/$PROJECT_ID/secrets/rails-master-key/versions/latest"
+      env: "RAILS_MASTER_KEY"
 
 options:
   logging: CLOUD_LOGGING_ONLY
