--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -36,7 +36,8 @@ steps:
         "${_SERVICE_NAME}",
         "--platform", "managed",
         "--region", "${_REGION}",
-        "--image", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}"
+        "--image", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}",
+        '--set-env-vars', 'RAILS_MASTER_KEY=${RAILS_MASTER_KEY}'
       ]
 
 options:
