--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -19,6 +19,4 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
-  gcp:
-    db_password: REDACTED
+  secret_key_base: Rails.application.credentials.secret_key_base
