--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,15 @@
 steps:
+  - id: "fetch secrets"
+    name: "gcr.io/cloud-builders/gcloud"
+    entrypoint: "bash"
+    args:
+      [
+        "-c",
+        "export NEXT_PUBLIC_URL=$(gcloud secrets versions access latest --secret=NEXT_PUBLIC_URL) && \
+         export NEXT_PUBLIC_FRONTEND=$(gcloud secrets versions access latest --secret=NEXT_PUBLIC_FRONTEND) && \
+         echo 'SECRETS fetched'
+         "
+      ]
 
   - id: "build image"
     name: "gcr.io/cloud-builders/docker"
@@ -18,7 +29,9 @@ steps:
         "${_SERVICE_NAME}",
         "--platform", "managed",
         "--region", "${_REGION}",
-        "--image", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}",
+        "--image", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}"
+        '--set-env-vars', 'NEXT_PUBLIC_URL=${NEXT_PUBLIC_URL}'
+        '--set-env-vars', 'NEXT_PUBLIC_FRONTEND=${NEXT_PUBLIC_FRONTEND}'
       ]
 
 substitutions:
