--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "embla-carousel-react": "^8.1.5",
     "http-proxy-agent": "^7.0.2",
     "jscanify": "^1.2.0",
+    "jspdf": "^2.5.1",
     "net": "^1.0.2",
     "next": "^13.5.6",
     "next-auth": "^4.24.7",
