--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.7.2",
     "dayjs": "^1.11.12",
     "embla-carousel-react": "^8.1.5",
+    "html2canvas": "^1.4.1",
     "http-proxy-agent": "^7.0.2",
     "jscanify": "^1.2.0",
     "jspdf": "^2.5.1",
