--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-camera-pro": "^1.4.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18",
     "react-notifications-component": "^4.0.1",
     "shortid": "^2.2.16",
