--- a/cypress/fixtures/userdetails_approved.json
+++ b/cypress/fixtures/userdetails_approved.json
@@ -8,5 +8,6 @@
   "gender": "Male",
   "date_birth": "30-06-2024",
   "date_arrival": "30-06-2024",
-  "verification_status": "Approved"
+  "verification_status": "Approved",
+  "face_verified":true
 }
